--- a/lab exercise 3/style.css
+++ b/lab exercise 3/style.css
@@ -1,21 +1,58 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #e3f2fd;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+#card-list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	justify-content: center;
 }
 .card {
+	width: 300px;
+	background: white;
+	border-radius: 10px;
 	padding: 10px;
 }
+.card img {
+	width: 100%;
+	background: white;
+	border-radius: 10px;
+	height: 250px;
+}
 .card-name {
-	font-weight: 600;
-	font-size: 3em;
-	padding: 0 0 10px 0;
+	font-weight: bold;
+	font-size: 1.5em;
 }
+
 .card-title {
-	font-weight: 300;
-	font-size: 2em;
-	padding: 0 0 10px 0;
+	font-size: 1.2em;
+	color: rgb(62, 60, 60);
 }
-.card-description {
-	font-weight: 400;
-	font-size: 2em;
+
+.card-desc {
+	font-style: italic;
+}
+
+.card-body {
+	padding: 15px;
+	text-align: center;
+}
+
+.buttonLoc {
+	display: flex;
+	justify-content: center;
+	margin: 20px;
+	width: 100%;
+}
+button {
+	background-color: blue;
+	color: white;
+	width: 100px;
+	height: 30px;
+	font-size: 1em;
 }
