--- a/labexercise10/style.css
+++ b/labexercise10/style.css
@@ -12,6 +12,11 @@
 .card-body {
 	overflow: scroll;
 }
+
+.card-body p {
+	display: inline;
+}
+
 .item-image {
 	height: 18em;
 	align-items: center;
